--- a/contato.html
+++ b/contato.html
@@ -69,10 +69,11 @@
               <input class="mb-3 p-1" type="email" id="email" name="email" placeholder="E-mail" required>
             </div>
             <div>
-              <textarea style="resize: none;" cols="23" class="mb-3 p-1" id="mensagem" name="mensagem" placeholder="Deixe seu feedback..." required></textarea>
+              <textarea style="resize: none; max-width: 209px;" cols="23" class="mb-3 p-1" id="mensagem" name="mensagem" placeholder="Deixe seu feedback..." required></textarea>
             </div>
-            <button class="btn btn-primary" type="submit">Enviar</button>
+            <button class="btn btn-form-submmit btn-primary" type="submit">Enviar</button>
           </form>
+          
         </div>
       </div>
     </div>
