--- a/index.html
+++ b/index.html
@@ -73,12 +73,10 @@
       scelerisque dolor. Pellentesque sagittis, leo ut pharetra suscipit, sapien mauris malesuada mauris, eu vestibulum
       ipsum lacus eu quam. Fusce ut dolor dui. Praesent eu bibendum enim. Nullam nec nulla dolor. Integer sed neque eu
       ipsum luctus semper.</p>
-    <div class="footer mt-5">
+  </div>
+  <div class="footer">
       <p class="mb-0 ">© 2023 Todos os direitos reservados.
     </div>
-  </div>
 </body>
 
 </html>
-
-fodase
