--- a/contato.html
+++ b/contato.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formulário de Contato</title>
+  
   <!-- BOOTSTRAP CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -57,26 +58,31 @@
     </div>
   </div>
 
-    <div class="area">
-      <div class="container">
-        <div class="feedback">
-          <h3 class="mb-3">Contate-nos</h3>
-          <form action="#" method="post" onsubmit="validar();">
-            <div>
-              <input class="mb-3 p-1" type="text" id="nome" name="nome" placeholder="Nome" autofocus required>
-            </div>
-            <div>
-              <input class="mb-3 p-1" type="email" id="email" name="email" placeholder="E-mail" required>
-            </div>
-            <div>
-              <textarea style="resize: none; max-width: 209px;" cols="23" class="mb-3 p-1" id="mensagem" name="mensagem" placeholder="Deixe seu feedback..." required></textarea>
-            </div>
-            <button class="btn btn-form-submmit btn-primary" type="submit">Enviar</button>
-          </form>
+  <div class="area">
+    <div class="container">
+              <div class="feedback">
+  <h3 class="mb-3">Contate-nos</h3>
+  <form action="submit-form.php" method="POST">
+    <div class="form-group">
+      <label for="nome">Nome:</label>
+      <input type="text" id="nome" name="nome" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" class="form-control" required>
+    </div>
+    <div class="form-group">
+      <label for="mensagem">Mensagem:</label>
+      <textarea id="mensagem" name="mensagem" class="form-control" rows="5" required></textarea>
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary">Enviar</button>
+    </div>
           
-        </div>
+        </form>
       </div>
     </div>
+  </div>
     <div class="footer">
       <p>&copy; 2023 Todos os direitos reservados</p>
     </div>
